fix(service): correct method usage in BestPpnService
Replaced `get(0)` with `getFirst()` in `ppnPrintResultList` to ensure compatibility and avoid potential runtime issues.